welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:1: error: reassignment to val
def positionFinale()=Boolean = {
                             ^